# finite-delta

./: LICENSE  README.md  pyproject.toml
examples/: 1D_Coefficients_Simple.py  3D_Random_Function.py  3d_example.ipynb  Lax_Wendroff_Method_Advection.py
src/finitedelta/: __init__.py  get_coef1d.py  get_coefnd.py  get_partials.py  grid_handler1d.py  grid_handlernd.py
