[build-system]
requires = ["setuptools>=66", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finitedelta"
version = "0.1.0"
description = "A finite difference coefficient generator"
license = { text = "MIT" }
dependencies = ["numpy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"finitedelta" = ["LICENSE"]
